--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2708,7 +2708,7 @@ input[type="button"]:disabled,
 	justify-content: space-between;
 	background-color: #1f1815;
 	background-attachment: scroll, scroll;
-	background-image: url("images/overlay.png"), url("../../images/bg.jpeg");
+	background-image: url("images/overlay.png"), url("../../images/bg2.png");
 	background-position: top left, top left;
 	background-repeat: repeat, no-repeat;
 	background-size: auto, 150%;
